<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.orasaka</groupId>
    <artifactId>orasaka-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>orasaka-parent</name>
    <description>Orasaka Domain-Driven Monorepo Root</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Versions -->
        <spring-boot.version>3.5.0-SNAPSHOT</spring-boot.version> <!-- Using snapshot/milestone as requested -->
        <spring-ai.version>1.1.6</spring-ai.version>
        <graphql-spring-boot.version>15.0.0</graphql-spring-boot.version>
        <archunit.version>1.3.0</archunit.version>
        <jacoco.version>0.8.12</jacoco.version>
    </properties>

    <modules>
        <module>orasaka-core</module>
        <module>orasaka-identity</module>
        <module>orasaka-gateway</module>
        <module>orasaka-tools</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Internal Modules -->
            <dependency>
                <groupId>com.orasaka</groupId>
                <artifactId>orasaka-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orasaka</groupId>
                <artifactId>orasaka-identity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orasaka</groupId>
                <artifactId>orasaka-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Architectural Testing -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <!-- Java 21: recognises records, sealed types, virtual threads -->
                    <source>21</source>
                    <!-- Suppress pedantic Javadoc formatting errors -->
                    <doclint>none</doclint>
                    <!--
                        The plugin appends /apidocs to this value automatically.
                        Result: ${project.basedir}/docs/apidocs/index.html
                    -->
                    <reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate-javadoc</id>
                        <inherited>false</inherited>
                        <!-- Keeps docs in sync with every package lifecycle run -->
                        <phase>package</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>1.22.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
